--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/common.css" />
   </head>
   <body>
     <form class="form-search">
@@ -23,10 +24,11 @@
       />
       <button type="submit" class="button-search">Search</button>
     </form>
-    <ul class="gallery"></ul>
-    <script type="module" src="./main.js"></script>
-    <!-- <script type="module" src="/src/main.tsx"></script>
-    <script type="module" src="/src/main.jsx"></script> -->
+    <div class="container">
+      <span class="loader"></span>
+      <ul class="gallery"></ul>
+    </div>
+    <script type="module" src="main.js"></script>
     <script type="module" src="./js/pixabay-api.js"></script>
     <script type="module" src="./js/render-functions.js"></script>
   </body>
