--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
       <span class="loader"></span>
       <ul class="gallery"></ul>
     </div>
-    <script type="module" src="main.js"></script>
+    <script type="module" src="./main.js"></script>
     <script type="module" src="./js/pixabay-api.js"></script>
     <script type="module" src="./js/render-functions.js"></script>
   </body>
